feat(utils): 添加实体工具类并扩展物品和方块的未知类型检查功能